<resources>
    <string name="app_name">exposit</string>
    <string name="sign_in"><![CDATA[</SIGN IN>]]></string>
    <string name="sign_up"><![CDATA[</SIGN UP>]]></string>
    <string name="registration"><![CDATA[</REGISTRATION>]]></string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="menu"><![CDATA[</MENU>]]></string>
    <string name="fragment_profile"><![CDATA[</PROFILE>]]></string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="email">Email</string>
    <string name="profile_fragment"><![CDATA[</PROFILE>]]></string>
    <string name="sex_radio">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password_reg">Password</string>
    <string name="Email_reg">Email</string>
    <string name="add_button"><![CDATA[</ADD>]]></string>

    <array name="genders">
        <item>Male</item>
        <item>Female</item>
    </array>
</resources>
